Revision history for Verilator

The contributors that suggested a given feature are shown in [].  [by ...]
indicates the contributor was also the author of the fix; Thanks!

* Verilator 3.63****

***  Add --trace-depth option for minimizing VCD file size. [Emerson Suguimoto]

* Verilator 3.632 1/17/2007

***  Add /*verilator isolate_assignments*/ attribute.  [Mike Shinkarovsky]

* Verilator 3.631 1/2/2007

**   Support standard NAME[#] for cells created by arraying or generate for.
     This replaces the non-standard name__# syntax used in earlier versions.

**** Fix again dotted references into generate cells.  [David Hewson]
     Verilator no longer accepts duplicated variables inside unique
     generate blocks as this is illegal according to the specification.

**** Fix $readmem* with filenames < 8 characters.  [Emerson Suguimoto]

* Verilator 3.630 12/19/2006

**   Support $readmemb and $readmemh.  [Eugene Weber, Arthur Kahlich]

***  Fixed configure and compiling under Solaris.  [Bob Farrell]

***  When dotted signal lookup fails, help the user by showing known scopes.

***  Reduce depth of priority encoded case statements.  [Eugene Weber]

**** Fix dotted references inside generated cells.  [David Hewson]

**** Fix missed split optimization points underneath other re-split blocks.

* Verilator 3.623 12/05/2006

***  Add --output-split-cfuncs for accelerating GCC compile. [Eugene Weber]

**** Fix $signed mis-extending when input has a WIDTH violation. [Eugene Weber]

**** Add M32 make variable to support -m32 compiles.  [Eugene Weber]

* Verilator 3.622 10/17/2006 Stable

**** Fix --skip-identical without --debug, broken in 3.621.  [Andy Meier]

* Verilator 3.621 10/11/2006 Beta

**   Add /*verilator no_inline_task*/ to prevent over-expansion. [Eugene Weber]

***  Public functions now allow > 64 bit arguments.

**** Remove .vpp intermediate files when not under --debug.

**** Fix link error when using --exe with --trace.  [Eugene Weber]
