@@ -7,6 +7,8 @@ indicates the contributor was also the author of the fix; Thanks!
 
 ***  Add --trace-depth option for minimizing VCD file size. [Emerson Suguimoto]
 
+**** Fix isolate_assignments when many signals per always. [Mike Shinkarovsky]
+
 * Verilator 3.632 1/17/2007
 
 ***  Add /*verilator isolate_assignments*/ attribute.  [Mike Shinkarovsky]
